# Quirkt

./: .env.example  Dockerfile  README.md  index.html  pyproject.toml  requirements.txt
.github/workflows/: pages.yml
assets/: config.json
assets/css/: playground.css
assets/data/: playground.json
assets/js/: i18n.js  playground.js  simulator.js  visualizer.js
deploy/railway/: README.md
docs/: hsp-integration.md
quirkt/: __init__.py  export.py  oracle.py  portfolio.py  swap_search.py
scripts/: build_playground_data.py  run_local_demo.py
server/: main.py  runners.py
tests/: test_api.py  test_circuits.py
