[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "quirkt"
version = "0.1.0"
description = "Quantum modules for Hyperlinks Space Program — oracle, portfolio, swap search"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "qiskit>=1.0.0",
  "qiskit-aer>=0.14.0",
  "numpy>=1.26.0,<2.3",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27", "fastapi>=0.115.0"]
server = ["fastapi>=0.115.0", "uvicorn[standard]>=0.32.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["quirkt*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
